--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+   body{
+    background-color: #0cbaba;
+    background-image: linear-gradient(99deg, #0cbaba 0%, #380036 74%);
+    color: white;
+   }
